# Gstreamer-Opencv

./: .gitignore  CMakeLists.txt  README.md  main.cpp
GstVideoCap/: GstVideoCap.h
